[project]
name = "python-tor"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jayden Pyles", email = "jpylesbuisness@gmail.com"},
]
dependencies = [
    "requests[socks]>=2.31.0",
    "socks>=0",
    "bs4>=0.0.2",
    "asyncio>=3.4.3",
    "aiohttp>=3.9.3",
    "aiosocks>=0.2.6",
    "selenium>=4.19.0",
    "tld>=0.13",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
